# rust-openni2

./: Cargo.toml  README.md
examples/: closest_point.rs  data_dump.rs  device_callbacks.rs  event_based_read.rs  evented.rs  recording.rs  simple_viewer.rs
src/: device.rs  enums.rs  frame.rs  lib.rs  main.rs  recorder.rs  stream.rs  types.rs
